HS-952 (#727)
* HS-952: Incremental Task Set updates: task-set service add/remove operations instead of publish full taskset

- API for task sets takes incremental updates instead of the a full Task Set on every call
- Convert Inventory to a multi-module project
- Cucumber + Unit tests
- Add Developer Test example
- Log exceptions on RPC processing
- GRPC - replace use of client interceptor with inline header-attachment-interceptor in client calls.
- Move TaskSetPublisher interface from shared into inventory since it is internal to inventory
- Replaced NodeGrpcItTest with Cucumber tests (some tests not yet replaced)
- NodeGrpcServiceTest pure unit test in place of NodeGrpcTest.
- Minor refactoring of code blocks for more ROC (Real-Obvious-Code)
- Twin Ignite cache listener - also listen for "onCreated" events
- Remove the explicit 'jib:build' maven command-line argument in github actions; the pom files should make sure the right jib targets are built against the right phases.
- Use mvn install in the build pipeline and clean out any opennms artifacts from the m2 cache at the start of the build to prevent stale artifact usage.